# simple-threads-lab1-pr1ngls

./: CMakeLists.txt  README.md
src/: main.cpp
